y.output
State 1 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: exp

    2 exp: lvalue
    3    | NIL
    4    | LPAREN RPAREN
    5    | INT
    6    | STRING
    7    | CMT
    8    | LPAREN expseq RPAREN
    9    | MINUS exp
   10    | func_call_exp
   11    | arith_exp
   12    | comp_exp
   13    | bool_exp
   14    | record_create_exp
   15    | array_create_exp
   16    | lvalue ASSIGN exp
   17    | if_exp
   18    | loop_exp
   19    | BREAK
   20    | LET decs IN expseq END

   21 expseq: exp
   22       | expseq SEMICOLON exp

   23 if_exp: IF exp THEN exp
   24       | IF exp THEN exp ELSE exp

   25 loop_exp: WHILE exp DO exp
   26         | FOR ID ASSIGN exp TO exp DO exp

   27 func_call_exp: ID LPAREN RPAREN
   28              | ID LPAREN func_call_param_exp RPAREN

   29 func_call_param_exp: exp
   30                    | func_call_param_exp COMMA exp

   31 arith_exp: exp PLUS exp
   32          | exp MINUS exp
   33          | exp TIMES exp
   34          | exp DIVIDE exp

   35 comp_exp: exp EQ exp
   36         | exp NEQ exp
   37         | exp LT exp
   38         | exp LE exp
   39         | exp GT exp
   40         | exp GE exp

   41 bool_exp: exp AND exp
   42         | exp OR exp

   43 record_create_exp: ID LBRACE RBRACE
   44                  | ID LBRACE record_create_exp_no_empty RBRACE

   45 record_create_exp_no_empty: ID EQ exp
   46                           | record_create_exp_no_empty COMMA ID EQ exp

   47 array_create_exp: ID LBRACK exp RBRACK OF exp

   48 decs: /* empty */
   49     | decs dec

   50 dec: typedeclist
   51    | vardec
   52    | fundeclist

   53 typedeclist: typedec
   54            | typedec typedeclist

   55 typedec: TYPE ID EQ ty

   56 ty: ID
   57   | LBRACE tyfields RBRACE
   58   | ARRAY OF ID

   59 tyfields: /* empty */
   60         | tyfields_no_empty

   61 tyfields_no_empty: tyfield
   62                  | tyfields_no_empty COMMA tyfield

   63 tyfield: ID COLON ID

   64 vardec: VAR ID ASSIGN exp
   65       | VAR ID COLON ID ASSIGN exp

   66 fundeclist: fundec
   67           | fundec fundeclist

   68 fundec: FUNCTION ID LPAREN tyfields RPAREN EQ exp
   69       | FUNCTION ID LPAREN tyfields RPAREN COLON ID EQ exp

   70 lvalue: ID
   71       | lvalue DOT ID
   72       | ID LBRACK exp RBRACK
   73       | lvalue LBRACK exp RBRACK


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 26 27 28 43 44 45 46 47 55 56 58 63 64 65 68 69 70 71 72
STRING (259) 6
INT (260) 5
COMMA (261) 30 46 62
COLON (262) 63 65 69
SEMICOLON (263) 22
LPAREN (264) 4 8 27 28 68 69
RPAREN (265) 4 8 27 28 68 69
LBRACK (266) 47 72 73
RBRACK (267) 47 72 73
LBRACE (268) 43 44 57
RBRACE (269) 43 44 57
DOT (270) 71
PLUS (271) 31
MINUS (272) 9 32
TIMES (273) 33
DIVIDE (274) 34
EQ (275) 35 45 46 55 68 69
NEQ (276) 36
LT (277) 37
LE (278) 38
GT (279) 39
GE (280) 40
AND (281) 41
OR (282) 42
ASSIGN (283) 16 26 64 65
ARRAY (284) 58
IF (285) 23 24
THEN (286) 23 24
ELSE (287) 24
WHILE (288) 25
FOR (289) 26
TO (290) 26
DO (291) 25 26
LET (292) 20
IN (293) 20
END (294) 20
OF (295) 47 58
BREAK (296) 19
NIL (297) 3
FUNCTION (298) 68 69
VAR (299) 64 65
TYPE (300) 55
CMT (301) 7
LOW (302)
UMINUS (303)


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
program (50)
    on left: 1, on right: 0
exp (51)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20, on right:
    1 9 16 21 22 23 24 25 26 29 30 31 32 33 34 35 36 37 38 39 40 41
    42 45 46 47 64 65 68 69 72 73
expseq (52)
    on left: 21 22, on right: 8 20 22
if_exp (53)
    on left: 23 24, on right: 17
loop_exp (54)
    on left: 25 26, on right: 18
func_call_exp (55)
    on left: 27 28, on right: 10
func_call_param_exp (56)
    on left: 29 30, on right: 28 30
arith_exp (57)
    on left: 31 32 33 34, on right: 11
comp_exp (58)
    on left: 35 36 37 38 39 40, on right: 12
bool_exp (59)
    on left: 41 42, on right: 13
record_create_exp (60)
    on left: 43 44, on right: 14
record_create_exp_no_empty (61)
    on left: 45 46, on right: 44 46
array_create_exp (62)
    on left: 47, on right: 15
decs (63)
    on left: 48 49, on right: 20 49
dec (64)
    on left: 50 51 52, on right: 49
typedeclist (65)
    on left: 53 54, on right: 50 54
typedec (66)
    on left: 55, on right: 53 54
ty (67)
    on left: 56 57 58, on right: 55
tyfields (68)
    on left: 59 60, on right: 57 68 69
tyfields_no_empty (69)
    on left: 61 62, on right: 60 62
tyfield (70)
    on left: 63, on right: 61 62
vardec (71)
    on left: 64 65, on right: 51
fundeclist (72)
    on left: 66 67, on right: 52 67
fundec (73)
    on left: 68 69, on right: 66 67
lvalue (74)
    on left: 70 71 72 73, on right: 2 16 71 73


state 0

    0 $accept: . program $end

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11
    CMT     shift, and go to state 12

    program            go to state 13
    exp                go to state 14
    if_exp             go to state 15
    loop_exp           go to state 16
    func_call_exp      go to state 17
    arith_exp          go to state 18
    comp_exp           go to state 19
    bool_exp           go to state 20
    record_create_exp  go to state 21
    array_create_exp   go to state 22
    lvalue             go to state 23


state 1

   27 func_call_exp: ID . LPAREN RPAREN
   28              | ID . LPAREN func_call_param_exp RPAREN
   43 record_create_exp: ID . LBRACE RBRACE
   44                  | ID . LBRACE record_create_exp_no_empty RBRACE
   47 array_create_exp: ID . LBRACK exp RBRACK OF exp
   70 lvalue: ID .
   72       | ID . LBRACK exp RBRACK

    LPAREN  shift, and go to state 24
    LBRACK  shift, and go to state 25
    LBRACE  shift, and go to state 26

    LBRACK    [reduce using rule 70 (lvalue)]
    $default  reduce using rule 70 (lvalue)


state 2

    6 exp: STRING .

    $default  reduce using rule 6 (exp)


state 3

    5 exp: INT .

    $default  reduce using rule 5 (exp)


state 4

    4 exp: LPAREN . RPAREN
    8    | LPAREN . expseq RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    RPAREN  shift, and go to state 27
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11
    CMT     shift, and go to state 12

    exp                go to state 28
    expseq             go to state 29
    if_exp             go to state 15
    loop_exp           go to state 16
    func_call_exp      go to state 17
    arith_exp          go to state 18
    comp_exp           go to state 19
    bool_exp           go to state 20
    record_create_exp  go to state 21
    array_create_exp   go to state 22
    lvalue             go to state 23


state 5

    9 exp: MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11
    CMT     shift, and go to state 12

    exp                go to state 30
    if_exp             go to state 15
    loop_exp           go to state 16
    func_call_exp      go to state 17
    arith_exp          go to state 18
    comp_exp           go to state 19
    bool_exp           go to state 20
    record_create_exp  go to state 21
    array_create_exp   go to state 22
    lvalue             go to state 23


state 6

   23 if_exp: IF . exp THEN exp
   24       | IF . exp THEN exp ELSE exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11
    CMT     shift, and go to state 12

    exp                go to state 31
    if_exp             go to state 15
    loop_exp           go to state 16
    func_call_exp      go to state 17
    arith_exp          go to state 18
    comp_exp           go to state 19
    bool_exp           go to state 20
    record_create_exp  go to state 21
    array_create_exp   go to state 22
    lvalue             go to state 23


state 7

   25 loop_exp: WHILE . exp DO exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11
    CMT     shift, and go to state 12

    exp                go to state 32
    if_exp             go to state 15
    loop_exp           go to state 16
    func_call_exp      go to state 17
    arith_exp          go to state 18
    comp_exp           go to state 19
    bool_exp           go to state 20
    record_create_exp  go to state 21
    array_create_exp   go to state 22
    lvalue             go to state 23


state 8

   26 loop_exp: FOR . ID ASSIGN exp TO exp DO exp

    ID  shift, and go to state 33


state 9

   20 exp: LET . decs IN expseq END

    $default  reduce using rule 48 (decs)

    decs  go to state 34


state 10

   19 exp: BREAK .

    $default  reduce using rule 19 (exp)


state 11

    3 exp: NIL .

    $default  reduce using rule 3 (exp)


state 12

    7 exp: CMT .

    $default  reduce using rule 7 (exp)


state 13

    0 $accept: program . $end

    $end  shift, and go to state 35


state 14

    1 program: exp .
   31 arith_exp: exp . PLUS exp
   32          | exp . MINUS exp
   33          | exp . TIMES exp
   34          | exp . DIVIDE exp
   35 comp_exp: exp . EQ exp
   36         | exp . NEQ exp
   37         | exp . LT exp
   38         | exp . LE exp
   39         | exp . GT exp
   40         | exp . GE exp
   41 bool_exp: exp . AND exp
   42         | exp . OR exp

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39
    EQ      shift, and go to state 40
    NEQ     shift, and go to state 41
    LT      shift, and go to state 42
    LE      shift, and go to state 43
    GT      shift, and go to state 44
    GE      shift, and go to state 45
    AND     shift, and go to state 46
    OR      shift, and go to state 47

    $default  reduce using rule 1 (program)


state 15

   17 exp: if_exp .

    $default  reduce using rule 17 (exp)


state 16

   18 exp: loop_exp .

    $default  reduce using rule 18 (exp)


state 17

   10 exp: func_call_exp .

    $default  reduce using rule 10 (exp)


state 18

   11 exp: arith_exp .

    $default  reduce using rule 11 (exp)


state 19

   12 exp: comp_exp .

    $default  reduce using rule 12 (exp)


state 20

   13 exp: bool_exp .

    $default  reduce using rule 13 (exp)


state 21

   14 exp: record_create_exp .

    $default  reduce using rule 14 (exp)


state 22

   15 exp: array_create_exp .

    $default  reduce using rule 15 (exp)


state 23

    2 exp: lvalue .
   16    | lvalue . ASSIGN exp
   71 lvalue: lvalue . DOT ID
   73       | lvalue . LBRACK exp RBRACK

    LBRACK  shift, and go to state 48
    DOT     shift, and go to state 49
    ASSIGN  shift, and go to state 50

    $default  reduce using rule 2 (exp)


state 24

   27 func_call_exp: ID LPAREN . RPAREN
   28              | ID LPAREN . func_call_param_exp RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    RPAREN  shift, and go to state 51
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11
    CMT     shift, and go to state 12

    exp                  go to state 52
    if_exp               go to state 15
    loop_exp             go to state 16
    func_call_exp        go to state 17
    func_call_param_exp  go to state 53
    arith_exp            go to state 18
    comp_exp             go to state 19
    bool_exp             go to state 20
    record_create_exp    go to state 21
    array_create_exp     go to state 22
    lvalue               go to state 23


state 25

   47 array_create_exp: ID LBRACK . exp RBRACK OF exp
   72 lvalue: ID LBRACK . exp RBRACK

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11
    CMT     shift, and go to state 12

    exp                go to state 54
    if_exp             go to state 15
    loop_exp           go to state 16
    func_call_exp      go to state 17
    arith_exp          go to state 18
    comp_exp           go to state 19
    bool_exp           go to state 20
    record_create_exp  go to state 21
    array_create_exp   go to state 22
    lvalue             go to state 23


state 26

   43 record_create_exp: ID LBRACE . RBRACE
   44                  | ID LBRACE . record_create_exp_no_empty RBRACE

    ID      shift, and go to state 55
    RBRACE  shift, and go to state 56

    record_create_exp_no_empty  go to state 57


state 27

    4 exp: LPAREN RPAREN .

    $default  reduce using rule 4 (exp)


state 28

   21 expseq: exp .
   31 arith_exp: exp . PLUS exp
   32          | exp . MINUS exp
   33          | exp . TIMES exp
   34          | exp . DIVIDE exp
   35 comp_exp: exp . EQ exp
   36         | exp . NEQ exp
   37         | exp . LT exp
   38         | exp . LE exp
   39         | exp . GT exp
   40         | exp . GE exp
   41 bool_exp: exp . AND exp
   42         | exp . OR exp

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39
    EQ      shift, and go to state 40
    NEQ     shift, and go to state 41
    LT      shift, and go to state 42
    LE      shift, and go to state 43
    GT      shift, and go to state 44
    GE      shift, and go to state 45
    AND     shift, and go to state 46
    OR      shift, and go to state 47

    $default  reduce using rule 21 (expseq)


state 29

    8 exp: LPAREN expseq . RPAREN
   22 expseq: expseq . SEMICOLON exp

    SEMICOLON  shift, and go to state 58
    RPAREN     shift, and go to state 59


state 30

    9 exp: MINUS exp .
   31 arith_exp: exp . PLUS exp
   32          | exp . MINUS exp
   33          | exp . TIMES exp
   34          | exp . DIVIDE exp
   35 comp_exp: exp . EQ exp
   36         | exp . NEQ exp
   37         | exp . LT exp
   38         | exp . LE exp
   39         | exp . GT exp
   40         | exp . GE exp
   41 bool_exp: exp . AND exp
   42         | exp . OR exp

    $default  reduce using rule 9 (exp)


state 31

   23 if_exp: IF exp . THEN exp
   24       | IF exp . THEN exp ELSE exp
   31 arith_exp: exp . PLUS exp
   32          | exp . MINUS exp
   33          | exp . TIMES exp
   34          | exp . DIVIDE exp
   35 comp_exp: exp . EQ exp
   36         | exp . NEQ exp
   37         | exp . LT exp
   38         | exp . LE exp
   39         | exp . GT exp
   40         | exp . GE exp
   41 bool_exp: exp . AND exp
   42         | exp . OR exp

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39
    EQ      shift, and go to state 40
    NEQ     shift, and go to state 41
    LT      shift, and go to state 42
    LE      shift, and go to state 43
    GT      shift, and go to state 44
    GE      shift, and go to state 45
    AND     shift, and go to state 46
    OR      shift, and go to state 47
    THEN    shift, and go to state 60


state 32

   25 loop_exp: WHILE exp . DO exp
   31 arith_exp: exp . PLUS exp
   32          | exp . MINUS exp
   33          | exp . TIMES exp
   34          | exp . DIVIDE exp
   35 comp_exp: exp . EQ exp
   36         | exp . NEQ exp
   37         | exp . LT exp
   38         | exp . LE exp
   39         | exp . GT exp
   40         | exp . GE exp
   41 bool_exp: exp . AND exp
   42         | exp . OR exp

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39
    EQ      shift, and go to state 40
    NEQ     shift, and go to state 41
    LT      shift, and go to state 42
    LE      shift, and go to state 43
    GT      shift, and go to state 44
    GE      shift, and go to state 45
    AND     shift, and go to state 46
    OR      shift, and go to state 47
    DO      shift, and go to state 61


state 33

   26 loop_exp: FOR ID . ASSIGN exp TO exp DO exp

    ASSIGN  shift, and go to state 62


state 34

   20 exp: LET decs . IN expseq END
   49 decs: decs . dec

    IN        shift, and go to state 63
    FUNCTION  shift, and go to state 64
    VAR       shift, and go to state 65
    TYPE      shift, and go to state 66

    dec          go to state 67
    typedeclist  go to state 68
    typedec      go to state 69
    vardec       go to state 70
    fundeclist   go to state 71
    fundec       go to state 72


state 35

    0 $accept: program $end .

    $default  accept


state 36

   31 arith_exp: exp PLUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11
    CMT     shift, and go to state 12

    exp                go to state 73
    if_exp             go to state 15
    loop_exp           go to state 16
    func_call_exp      go to state 17
    arith_exp          go to state 18
    comp_exp           go to state 19
    bool_exp           go to state 20
    record_create_exp  go to state 21
    array_create_exp   go to state 22
    lvalue             go to state 23


state 37

   32 arith_exp: exp MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11
    CMT     shift, and go to state 12

    exp                go to state 74
    if_exp             go to state 15
    loop_exp           go to state 16
    func_call_exp      go to state 17
    arith_exp          go to state 18
    comp_exp           go to state 19
    bool_exp           go to state 20
    record_create_exp  go to state 21
    array_create_exp   go to state 22
    lvalue             go to state 23


state 38

   33 arith_exp: exp TIMES . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11
    CMT     shift, and go to state 12

    exp                go to state 75
    if_exp             go to state 15
    loop_exp           go to state 16
    func_call_exp      go to state 17
    arith_exp          go to state 18
    comp_exp           go to state 19
    bool_exp           go to state 20
    record_create_exp  go to state 21
    array_create_exp   go to state 22
    lvalue             go to state 23


state 39

   34 arith_exp: exp DIVIDE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11
    CMT     shift, and go to state 12

    exp                go to state 76
    if_exp             go to state 15
    loop_exp           go to state 16
    func_call_exp      go to state 17
    arith_exp          go to state 18
    comp_exp           go to state 19
    bool_exp           go to state 20
    record_create_exp  go to state 21
    array_create_exp   go to state 22
    lvalue             go to state 23


state 40

   35 comp_exp: exp EQ . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11
    CMT     shift, and go to state 12

    exp                go to state 77
    if_exp             go to state 15
    loop_exp           go to state 16
    func_call_exp      go to state 17
    arith_exp          go to state 18
    comp_exp           go to state 19
    bool_exp           go to state 20
    record_create_exp  go to state 21
    array_create_exp   go to state 22
    lvalue             go to state 23


state 41

   36 comp_exp: exp NEQ . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11
    CMT     shift, and go to state 12

    exp                go to state 78
    if_exp             go to state 15
    loop_exp           go to state 16
    func_call_exp      go to state 17
    arith_exp          go to state 18
    comp_exp           go to state 19
    bool_exp           go to state 20
    record_create_exp  go to state 21
    array_create_exp   go to state 22
    lvalue             go to state 23


state 42

   37 comp_exp: exp LT . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11
    CMT     shift, and go to state 12

    exp                go to state 79
    if_exp             go to state 15
    loop_exp           go to state 16
    func_call_exp      go to state 17
    arith_exp          go to state 18
    comp_exp           go to state 19
    bool_exp           go to state 20
    record_create_exp  go to state 21
    array_create_exp   go to state 22
    lvalue             go to state 23


state 43

   38 comp_exp: exp LE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11
    CMT     shift, and go to state 12

    exp                go to state 80
    if_exp             go to state 15
    loop_exp           go to state 16
    func_call_exp      go to state 17
    arith_exp          go to state 18
    comp_exp           go to state 19
    bool_exp           go to state 20
    record_create_exp  go to state 21
    array_create_exp   go to state 22
    lvalue             go to state 23


state 44

   39 comp_exp: exp GT . exp
